@@ -1,3 +1,10 @@
+2012-12-10  Tom Lane  <tgl@sss.pgh.pa.us>
+
+	* libtiff/tif_pixarlog.c: Improve previous patch for CVE-2012-4447
+ 	(to enlarge tbuf for possible partial stride at end) so that
+ 	overflow in the integer addition is detected.  Per gripe from
+ 	Huzaifa Sidhpurwala.
+
 2012-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* tools/tiffset.c: tiffset now supports a -u option to unset a
